tests/machine/x/hs/pure_global_fold.hs
-- Code generated by Mochi compiler; DO NOT EDIT.
{-# LANGUAGE DeriveGeneric #-}

module Main where

import Data.List (intercalate, isPrefixOf)
import qualified Data.List as List
import qualified Data.Map as Map
import Data.Maybe (fromMaybe)
import Data.Time.Clock.POSIX (getPOSIXTime)

inc :: Int -> Int
inc x = (_asInt (x) + k)

k = 2

main :: IO ()
main = do
  print (inc 3)
